--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 					<ul id="nav" class="nav nav-tabs" role="tablist">
 						<li><a href="#home">HOME</a></li>						
 						<li><a href="#fruits">FRUITS PIE</a></li>
-						<li><a href="#work">CHICKEN PIE</a></li>
-						<li><a href="#blog">ORDER</a></li>
+						<li><a href="#chicken">CHICKEN PIE</a></li>
+						<li><a href="#contact">ORDER</a></li>
 						<li><a href="#about">ABOUT ME</a></li>
 						<li><a href="#contact">CONTACT</a></li>
 					</ul>
@@ -76,7 +76,7 @@
 												<h1>WE LOVE PIES</h1>
 												<div class="bg-yellow"></div>
 												<span>Making pies is an art... and we push this to the extreme. This starts from selecting the best ingredients, but also giving it time &amp; love...</span><br />
-												<a class="digital" href="#order">Order your custom pie</a>
+												<a class="digital" href="#contact">Order your custom pie</a>
 											</div>
 										</div>
 									</div>
@@ -97,7 +97,7 @@
 												<h1>SWEET PIE</h1>
 												<div class="bg-yellow"></div>
 												<span>Fruit pies are the most common pies: apple, banana, peach... or any other seasonal flavor !</span><br />
-												<a class="digital" href="#order">Order your fresh Pie</a>
+												<a class="digital" href="#contact">Order your fresh Pie</a>
 											</div>
 										</div>
 									</div>
@@ -118,7 +118,7 @@
 												<h1>CHICKEN PIE</h1>
 												<div class="bg-yellow"></div>
 												<span>Pie can also be salty... and nothing else matches our Chicken Pie ! Pie for diner then pie for desert ?</span><br />
-												<a class="digital" href="#portfolio">Order Now</a>
+												<a class="digital" href="#contact">Order Now</a>
 											</div>
 										</div>
 									</div>
@@ -150,8 +150,8 @@
 						</div>
 						<div class="blog_text">
 							<h5><a href="#">APPLE PIE</a></h5>
-							<span>AVAILABLE ALL AROUND THE YEAR</span>
-							<p>This is the classical pie ! or should I say the Pie the you must try !.</p>
+							<span>AVAILABLE ALL YEAR ROUND</span>
+							<p>the Pie the you must try ! say my Dad</p>
 						</div>
 					</div>
 				</div>
@@ -162,8 +162,8 @@
 						</div>
 						<div class="blog_text">
 							<h5><a href="#">BANANA PIE</a></h5>
-							<span>AVAILABLE DURING WINTER</span>
-							<p>Banana, banana, banana... do you want one ?</p>
+							<span>AVAILABLE ONLY DURING WINTER</span>
+							<p>Banana, banana, banana... do you want mine ?</p>
 						</div>
 					</div>
 				</div>
@@ -174,8 +174,8 @@
 						</div>
 						<div class="blog_text">
 							<h5><a href="#">PECAN PIE</a></h5>
-							<span>XMAS SEASONAL ONE</span>
-							<p>Try it at your own risks !.</p>
+							<span>XMAS SEASONAL TIME</span>
+							<p>Try it at your own risks !</p>
 						</div>
 					</div>
 				</div>
@@ -184,27 +184,15 @@
 	</section>
 	<!-- blog-section-end -->	
 	<!-- work-section-start -->
-	<section class="how_to_work section_padding gallery" id="work">
+	<section class="how_to_work section_padding gallery" id="chicken">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-4 col-sm-6 col-text-center text-center">
 					<div class="work_text section-title wow flipInX" data-wow-delay="0.3s">
 						<h1>CHICKEN PIE</h1>
 						<p>When you think pie you think dessert...<br>But you can use our pies to plan your whole diner...</p>
+						<p><img src="images/chicken-pie.jpg" style="padding:5px"></p>
 						<p>One of the best <b>Chicken Pie</b> never made...</p>
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-8 col-sm-10 col-text-center">
-					<div class="menu_item wow flipInX" data-wow-delay="0.3s">
-						<ul>
-							<li data-filter="*" class="active">All</li>
-							<li data-filter=".magento">MAGENTO</li>
-							<li data-filter=".jquery">JQUERY</li>
-							<li data-filter=".wordpress">WORDPRESS</li>
-							<li data-filter=".html">HTML</li>
-						</ul>
 					</div>
 				</div>
 			</div>
@@ -307,14 +295,14 @@
 					<div class="single_counter happy_counter contact_icon">
 						<i class="fa fa-transgender-alt"></i>
 						<h1><span class="counter" id="counter_happy">810</span></h1>
-						<span>Apple slices</span>
+						<span>Apple sliced</span>
 					</div>
 				</div>
 				<div class="col-sm-3">
 					<div class="single_counter happy_counter contact_icon">
 						<i class="fa fa-comments"></i>
 						<h1><span class="counter" id="counter_happy">600</span></h1>
-						<span>Comments Reserved</span>
+						<span>Comments</span>
 					</div>
 				</div>
 			</div>
