--- a/www/index.html
+++ b/www/index.html
@@ -370,7 +370,7 @@
 						<div class="col-sm-4 wow fadeInLeft" data-wow-delay="0.3s">
 							<div class="contact_icon">
 								<i class="fa fa-mobile"></i>
-								<p>123-456-7890</p>
+								<p>801-941-1855</p>
 							</div>
 						</div>
 						<div class="col-sm-4 wow fadeInUp" data-wow-delay="0.3s">
@@ -379,13 +379,14 @@
 								<p>EDEN, UT</p>
 							</div>
 						</div>
-						<div class="col-sm-4 wow fadeInRight" data-wow-delay="0.3s">
+						<div class="col-sm-4 wow fadeInRight" data-wow-delay="0.3s" onclick="location.href='mailto:order@pie-in-the-sky.com?subject=Custom%20pie%20order';" style="cursor: pointer;">
 							<div class="contact_icon">
 								<i class="fa fa-envelope-o"></i>
 								<p>ORDER@PIE-IN-THE-SKY.COM</p>
 							</div>
 						</div>
 					</div>
+<!--					
 					<hr class="margin_eight" />
 					<div class="col-sm-6">
 						<input type="text" placeholder="Your Name" name="name">
@@ -400,6 +401,7 @@
 						<span class="required">*Please complete all fields correctly</span>
 						<input type="button" class="btn-black " value="send message" name="send message" id="contact-button">
 					</div>
+-->					
 				</div>
 			</div>
 		</div>
