update email address

--- a/www/index.html
+++ b/www/index.html
@@ -379,10 +379,10 @@
 								<p>EDEN, UT</p>
 							</div>
 						</div>
-						<div class="col-sm-4 wow fadeInRight" data-wow-delay="0.3s" onclick="location.href='mailto:order@pie-in-the-sky.com?subject=Custom%20pie%20order';" style="cursor: pointer;">
+						<div class="col-sm-4 wow fadeInRight" data-wow-delay="0.3s" onclick="location.href='mailto:order@pieinthesky-eden.com?subject=Custom%20pie%20order';" style="cursor: pointer;">
 							<div class="contact_icon">
 								<i class="fa fa-envelope-o"></i>
-								<p>ORDER@PIE-IN-THE-SKY.COM</p>
+								<p>ORDER@PIEINTHESKY-EDEN.COM</p>
 							</div>
 						</div>
 					</div>
