--- a/www/index.html
+++ b/www/index.html
@@ -44,8 +44,10 @@
 				<nav class="mainmenu"  id="navbar-example">
 					<ul id="nav" class="nav nav-tabs" role="tablist">
 						<li><a href="#home">HOME</a></li>
-						<li><a href="#fruits">FRUITS PIE</a></li>
-						<li><a href="#chicken">CHICKEN PIE</a></li>
+						<li><a href="#fruits">FRUITS PIES</a></li>
+						<li><a href="#cream">CREAM PIES</a></li>
+						<li><a href="#special">SPECIAL PIES</a></li>
+						<li><a href="#meat">MEAT PIES</a></li>						
 						<li><a href="#contact">ORDER</a></li>
 						<li><a href="#about">ABOUT ME</a></li>
 						<li><a href="#contact">CONTACT</a></li>
@@ -94,9 +96,9 @@
 									<div class="slide_text">
 										<div class="table">
 											<div class="table-cell">
-												<h1>SWEET PIE</h1>
+												<h1>FRUIT PIES</h1>
 												<div class="bg-yellow"></div>
-												<span>Fruit pies are the most common pies: apple, banana, peach... or any other seasonal flavor !</span><br />
+												<span>Fruit pies are the most common pies: apple, banana, peach... or any other seasonal flavor!</span><br />
 												<a class="digital" href="#contact">Order your fresh Pie</a>
 											</div>
 										</div>
@@ -139,60 +141,103 @@
 			<div class="row">
 				<div class="blog-title section-title wow flipInX" data-wow-delay="0.3s">
 					<h1>FRUITS PIES</h1>
-					<p>Fruit pies are the most common pies: apple, banana, peach... or any other seasonal flavor !</p>
+					<span>AVAILABLE IN SEASON and slightly beyond</span>
+					<p>strawberry/rhubarb, cherry, peach, peach/berry, apple...<br><i>continuously inventing new recipes</i></p>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-sm-4">
 					<div class="single_blog wow fadeInLeft" data-wow-delay="0.3s">
 						<div class="blog_img">
-							<a href="#"><img src="images/blog/blog-post1.jpg" alt="" /></a>
+							<a href="#"><img src="images/blog/apple.jpg" alt="" /></a>
 						</div>
 						<div class="blog_text">
 							<h5><a href="#">APPLE PIE</a></h5>
-							<span>AVAILABLE ALL YEAR ROUND</span>
-							<p>the Pie the you must try ! say my Dad</p>
+							<span>From September through Thanksgiving</span>
+							<p>&nbsp;</p>
 						</div>
 					</div>
 				</div>
 				<div class="col-sm-4">
 					<div class="single_blog wow fadeInUp" data-wow-delay="0.3s">
 						<div class="blog_img">
-							<a href="#"><img src="images/blog/blog-post2.jpg" alt="" /></a>
+							<a href="#"><img src="images/blog/triple-berry.jpg" alt="" /></a>
 						</div>
 						<div class="blog_text">
-							<h5><a href="#">BANANA PIE</a></h5>
-							<span>AVAILABLE ONLY DURING WINTER</span>
-							<p>Banana, banana, banana... do you want mine ?</p>
+							<h5><a href="#">PEACH/TRIPLE BERRY</a></h5>
+							<span>From August to November</span>
+							<p>raspberry, blackberry &amp; blueberry</p>
 						</div>
 					</div>
 				</div>
 				<div class="col-sm-4">
 					<div class="single_blog wow fadeInRight" data-wow-delay="0.3s">
 						<div class="blog_img">
-							<a href="#"><img src="images/blog/blog-post3.jpg" alt="" /></a>
+							<a href="#"><img src="images/blog/strawberry.jpg" alt="" /></a>
 						</div>
 						<div class="blog_text">
-							<h5><a href="#">PECAN PIE</a></h5>
-							<span>XMAS SEASONAL TIME</span>
-							<p>Try it at your own risks !</p>
+							<h5><a href="#">STRAWBERRY/RHUBARB PIE</a></h5>
+							<span>From May to July</span>
+							<p>Lattice top or full crust</p>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
+	<!-- slider-section-end -->
+	<!-- blog-section-start -->
+	<section class="blog section_padding text-center" id="cream">
+		<div class="container">
+			<div class="row">
+				<div class="blog-title section-title wow flipInX" data-wow-delay="0.3s">
+					<h1>CREAM PIES</h1>
+					<p>Available all year round: chocolate, banana, coconut, key lime pie !</p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-sm-2">&nbsp;
+				</div>
+				<div class="col-sm-4">
+					<div class="single_blog wow fadeInLeft" data-wow-delay="0.3s">
+						<div class="blog_img">
+							<a href="#"><img src="images/blog/chocolate-cream.jpg" alt="" /></a>
+						</div>
+						<div class="blog_text">
+							<h5><a href="#">CHOCOLATE CREAM PIE</a></h5>
+							<span>AVAILABLE ALL YEAR</span>
+							<p>&nbsp;</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-4">
+					<div class="single_blog wow fadeInUp" data-wow-delay="0.3s">
+						<div class="blog_img">
+							<a href="#"><img src="images/blog/coconut.jpg" alt="" /></a>
+						</div>
+						<div class="blog_text">
+							<h5><a href="#">COCONUT CREAM PIE</a></h5>
+							<span>AVAILABLE ALL YEAR</span>
+							<p>&nbsp;</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>	
 	<!-- blog-section-end -->
 	<!-- work-section-start -->
-	<section class="how_to_work section_padding gallery" id="chicken">
+	<section class="how_to_work section_padding gallery" id="meat">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-4 col-sm-6 col-text-center text-center">
 					<div class="work_text section-title wow flipInX" data-wow-delay="0.3s">
-						<h1>CHICKEN PIE</h1>
-						<p>When you think pie you think dessert...<br>But you can use our pies to plan your whole diner...</p>
-						<p><img src="images/chicken-pie.jpg" style="padding:5px"></p>
-						<p>One of the best <b>Chicken Pie</b> never made...</p>
+						<h1>MEAT PIES</h1>
+						<p>Available all year round: chicken or beef<br>
+							- &nbsp;6" personal size (serves 1-2)<br>
+							- 11" family size (serves 4-6)							
+						</p>
+						<p><img src="images/meat/meat.jpg" style="padding:5px"></p>
 					</div>
 				</div>
 			</div>
