Update text and css, add images

--- a/www/index.html
+++ b/www/index.html
@@ -47,7 +47,7 @@
 						<li><a href="#fruits">FRUITS PIES</a></li>
 						<li><a href="#cream">CREAM PIES</a></li>
 						<li><a href="#special">SPECIAL PIES</a></li>
-						<li><a href="#meat">MEAT PIES</a></li>						
+						<li><a href="#dinner">DINNER PIES</a></li>
 						<li><a href="#contact">ORDER</a></li>
 						<li><a href="#about">ABOUT ME</a></li>
 						<li><a href="#contact">CONTACT</a></li>
@@ -98,7 +98,7 @@
 											<div class="table-cell">
 												<h1>FRUIT PIES</h1>
 												<div class="bg-yellow"></div>
-												<span>Fruit pies are the most common pies: apple, banana, peach... or any other seasonal flavor!</span><br />
+												<span>Fruit pies are the most common pies: apple, peach, berries... made with local home grown produce!</span><br />
 												<a class="digital" href="#contact">Order your fresh Pie</a>
 											</div>
 										</div>
@@ -117,9 +117,9 @@
 									<div class="slide_text">
 										<div class="table">
 											<div class="table-cell">
-												<h1>CHICKEN PIE</h1>
+												<h1>DINNER PIES</h1>
 												<div class="bg-yellow"></div>
-												<span>Pie can also be salty... and nothing else matches our Chicken Pie ! Pie for diner then pie for desert ?</span><br />
+												<span>Why not try a dinner in one: meat, vegetables in a flaky pastry. Doesn't seem delicious to you?</span><br />
 												<a class="digital" href="#contact">Order Now</a>
 											</div>
 										</div>
@@ -136,13 +136,17 @@
 	</section>
 	<!-- slider-section-end -->
 	<!-- blog-section-start -->
-	<section class="blog section_padding text-center" id="fruits">
+	<section class="blog section_padding text-center fruit" id="fruits">
 		<div class="container">
 			<div class="row">
 				<div class="blog-title section-title wow flipInX" data-wow-delay="0.3s">
 					<h1>FRUITS PIES</h1>
 					<span>AVAILABLE IN SEASON and slightly beyond</span>
-					<p>strawberry/rhubarb, cherry, peach, peach/berry, apple...<br><i>continuously inventing new recipes</i></p>
+					<p>
+						strawberry/rhubarb, cherry, peach, peach/berry, apple...<br>
+						<i>continuously inventing new recipes</i><br>
+						<b>$17</b>
+					</p>
 				</div>
 			</div>
 			<div class="row">
@@ -187,12 +191,15 @@
 	</section>
 	<!-- slider-section-end -->
 	<!-- blog-section-start -->
-	<section class="blog section_padding text-center" id="cream">
+	<section class="blog section_padding text-center cream" id="cream">
 		<div class="container">
 			<div class="row">
 				<div class="blog-title section-title wow flipInX" data-wow-delay="0.3s">
 					<h1>CREAM PIES</h1>
-					<p>Available all year round: chocolate, banana, coconut, key lime pie !</p>
+					<p>
+						Available all year round: chocolate, banana, coconut, key lime pie!<br>
+						<b>$17</b>
+					</p>
 				</div>
 			</div>
 			<div class="row">
@@ -205,7 +212,7 @@
 						</div>
 						<div class="blog_text">
 							<h5><a href="#">CHOCOLATE CREAM PIE</a></h5>
-							<span>AVAILABLE ALL YEAR</span>
+							<span>Available all year</span>
 							<p>&nbsp;</p>
 						</div>
 					</div>
@@ -217,7 +224,7 @@
 						</div>
 						<div class="blog_text">
 							<h5><a href="#">COCONUT CREAM PIE</a></h5>
-							<span>AVAILABLE ALL YEAR</span>
+							<span>Available all year</span>
 							<p>&nbsp;</p>
 						</div>
 					</div>
@@ -227,17 +234,88 @@
 	</section>	
 	<!-- blog-section-end -->
 	<!-- work-section-start -->
-	<section class="how_to_work section_padding gallery" id="meat">
+	<!-- slider-section-end -->
+	<!-- blog-section-start -->
+	<section class="blog section_padding text-center special" id="special">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-4 col-sm-6 col-text-center text-center">
-					<div class="work_text section-title wow flipInX" data-wow-delay="0.3s">
-						<h1>MEAT PIES</h1>
-						<p>Available all year round: chicken or beef<br>
-							- &nbsp;6" personal size (serves 1-2)<br>
-							- 11" family size (serves 4-6)							
-						</p>
-						<p><img src="images/meat/meat.jpg" style="padding:5px"></p>
+				<div class="blog-title section-title wow flipInX" data-wow-delay="0.3s">
+					<h1>SPECIAL PIES</h1>
+					<p>
+						Pumpkin chiffon pie, Pecan pie, Chocolate chip pie, Caramel apple pie<br>
+						<b>$17 each, except Pecan which is $20</b>
+					</p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-sm-2">&nbsp;
+				</div>
+				<div class="col-sm-4">
+					<div class="single_blog wow fadeInLeft" data-wow-delay="0.3s">
+						<div class="blog_img">
+							<a href="#"><img src="images/blog/caramel-apple.jpg" alt="" /></a>
+						</div>
+						<div class="blog_text">
+							<h5><a href="#">CARAMEL APPLE PIE</a></h5>
+							<span>Available for Thanksgiving and Christmas</span>
+							<p>&nbsp;</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-4">
+					<div class="single_blog wow fadeInUp" data-wow-delay="0.3s">
+						<div class="blog_img">
+							<a href="#"><img src="images/blog/pecan.jpg" alt="" /></a>
+						</div>
+						<div class="blog_text">
+							<h5><a href="#">PECAN PIE</a></h5>
+							<span>Available for Thanksgiving and Christmas</span>
+							<p>&nbsp;</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- blog-section-end -->
+	<!-- blog-section-start -->
+	<section class="blog section_padding text-center dinner" id="dinner">
+		<div class="container">
+			<div class="row">
+				<div class="blog-title section-title wow flipInX" data-wow-delay="0.3s">
+					<h1>DINNER PIES</h1>
+					<p>Available all year round: chicken or beef<br>
+						6" personal size (serves 1-2) - <b>$7.50</b><br>
+						11" family size (serves 4-6) - <b>$22</b><br>
+						<i>Available fresh, ready to bake or frozen ready to put in your freezer or fresh baked, ready to pick up for dinner</i>
+					</p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-sm-2">&nbsp;
+				</div>
+				<div class="col-sm-4">
+					<div class="single_blog wow fadeInLeft" data-wow-delay="0.3s">
+						<div class="blog_img">
+							<a href="#"><img src="images/blog/chicken.jpg" alt="" /></a>
+						</div>
+						<div class="blog_text">
+							<h5><a href="#">CHICKEN POT PIE</a></h5>
+							<span>Available all year round</span>
+							<p>&nbsp;</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-4">
+					<div class="single_blog wow fadeInUp" data-wow-delay="0.3s">
+						<div class="blog_img">
+							<a href="#"><img src="images/blog/beef.jpg" alt="" /></a>
+						</div>
+						<div class="blog_text">
+							<h5><a href="#">BEEF POT PIE</a></h5>
+							<span>Available all year round</span>
+							<p>&nbsp;</p>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -249,7 +327,7 @@
 		<div class="container">
 			<div class="row text-center">
 				<div class="about_title col-text-center section-title wow flipInX" data-wow-delay="0.3s">
-					<h1>OUR STORY</h1>
+					<h1>ABOUT THE PIES</h1>
 					<p>Everything started by cooking with love for family &amp; friends...<br> who were always asking me to prepare for them one of my famous pie...
 						<br>So why not share with you today these pies ?</p>
 					<p>My recipe is as simple as 1, 2, 3...</p>
@@ -294,8 +372,8 @@
 		<div class="container">
 			<div class="row">
 				<div class="about_title col-text-center section-title wow flipInX" data-wow-delay="0.3s">
-					<h1>ABOUT KELLI</h1>
-					<p>Smile, Joy, Happiness... not necessary in this order.<br>Simply the best chef of the Valley (after Stephanie maybe).</p>
+					<h1>ABOUT ME</h1>
+					<p>Smile, Joy, Happiness... not necessary in this order.<br>Simply the best chef of the Valley.</p>
 				</div>
 				<div class="col-sm-4">
 					&nbsp;
@@ -304,8 +382,8 @@
 					<div class="team_text wow fadeInRight" data-wow-delay="0.3s">
 						<img src="images/team/team-member3.jpg" alt="" />
 						<div class="team_single_text">
-							<span class="span_first">Kelli Spurlock</span><br />
-							<span>PIE DESIGNER</span>
+							<span class="span_first">Kelli</span><br />
+							<span>CHEF PIE DESIGNER</span>
 							<div class="bg-yellow team_yellow"></div>
 							<div class="team_icon">
 								<a href="www.facebook.com"><i class="fa fa-facebook"></i></a>
@@ -409,7 +487,8 @@
 			<div class="row">
 				<div class="col-md-9 col-sm-12 col-text-center text-center">
 					<div class="contact_title section-title wow flipInX" data-wow-delay="0.3s">
-						<h1>CONTACT US</h1>
+						<h1>CONTACT ME</h1>
+						<p>Please place pie order at least 24 hours in advance.</p>
 					</div>
 					<div class="row">
 						<div class="col-sm-4 wow fadeInLeft" data-wow-delay="0.3s">
