--- a/www/index.html
+++ b/www/index.html
@@ -248,12 +248,10 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-sm-2">&nbsp;
-				</div>
 				<div class="col-sm-4">
 					<div class="single_blog wow fadeInLeft" data-wow-delay="0.3s">
 						<div class="blog_img">
-							<a href="#"><img src="images/blog/caramel-apple.jpg" alt="" /></a>
+							<a href="#"><img src="images/blog/caramel-apple2.jpg" alt="" /></a>
 						</div>
 						<div class="blog_text">
 							<h5><a href="#">CARAMEL APPLE PIE</a></h5>
@@ -270,6 +268,18 @@
 						<div class="blog_text">
 							<h5><a href="#">PECAN PIE</a></h5>
 							<span>Available for Thanksgiving and Christmas</span>
+							<p>&nbsp;</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-4">
+					<div class="single_blog wow fadeInUp" data-wow-delay="0.3s">
+						<div class="blog_img">
+							<a href="#"><img src="images/blog/pumpkin.jpg" alt="" /></a>
+						</div>
+						<div class="blog_text">
+							<h5><a href="#">PUMPKIN CHIFFON PIE</a></h5>
+							<span>Available all year</span>
 							<p>&nbsp;</p>
 						</div>
 					</div>
