--- a/www/index.html
+++ b/www/index.html
@@ -588,5 +588,14 @@
 	<script src="js/owl.carousel.min.js"></script>
 	<!-- main js -->
     <script src="js/main.js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-109260365-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-109260365-1');
+	</script>
   </body>
 </html>
