Add more images, update text and remove unecessary sections (testimonial and happy client)

--- a/www/index.html
+++ b/www/index.html
@@ -87,7 +87,7 @@
 											<div class="table-cell">
 												<h1>WE LOVE PIES</h1>
 												<div class="bg-yellow"></div>
-												<span>Making pies is an art... and we push this to the extreme. This starts from selecting the best ingredients, but also giving it time &amp; love...</span><br />
+												<span>Making pies is an art... This starts from selecting the best ingredients, but also giving it time &amp; love...</span><br />
 												<a class="digital" href="#contact">Order your custom pie</a>
 											</div>
 										</div>
@@ -108,7 +108,7 @@
 											<div class="table-cell">
 												<h1>FRUIT PIES</h1>
 												<div class="bg-yellow"></div>
-												<span>Fruit pies are the most common pies: apple, peach, berries... made with local home grown produce!</span><br />
+												<span>Apple, peach, berry... made with local produce</span><br />
 												<a class="digital" href="#contact">Order your fresh Pie</a>
 											</div>
 										</div>
@@ -129,7 +129,7 @@
 											<div class="table-cell">
 												<h1>DINNER PIES</h1>
 												<div class="bg-yellow"></div>
-												<span>Why not try a dinner in one: meat, vegetables in a flaky pastry. Doesn't seem delicious to you?</span><br />
+												<span>Beef, chicken and seasonal</span><br />
 												<a class="digital" href="#contact">Order Now</a>
 											</div>
 										</div>
@@ -167,7 +167,7 @@
 						</div>
 						<div class="blog_text">
 							<h5><a href="#">APPLE PIE</a></h5>
-							<span>From September through Thanksgiving</span>
+							<span>From September through Christmas</span>
 							<p>&nbsp;</p>
 						</div>
 					</div>
@@ -197,6 +197,22 @@
 					</div>
 				</div>
 			</div>
+			<div class="row">
+				<div class="col-sm-4">
+				</div>
+				<div class="col-sm-4">
+					<div class="single_blog wow fadeInLeft" data-wow-delay="0.3s">
+						<div class="blog_img">
+							<a href="#"><img src="images/blog/cherry2.jpg" alt="" /></a>
+						</div>
+						<div class="blog_text">
+							<h5><a href="#">CHERRY PIE</a></h5>
+							<span>From July 4th through September</span>
+							<p>&nbsp;</p>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</section>
 	<!-- slider-section-end -->
@@ -207,14 +223,13 @@
 				<div class="blog-title section-title wow flipInX" data-wow-delay="0.3s">
 					<h1>CREAM PIES</h1>
 					<p>
-						Available all year round: chocolate, banana, coconut, key lime pie!<br>
+						Available all year round: chocolate, banana, coconut!<br>
+						Graham cracker or pastry crust<br>
 						<b>$17</b>
 					</p>
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-sm-2">&nbsp;
-				</div>
 				<div class="col-sm-4">
 					<div class="single_blog wow fadeInLeft" data-wow-delay="0.3s">
 						<div class="blog_img">
@@ -234,6 +249,18 @@
 						</div>
 						<div class="blog_text">
 							<h5><a href="#">COCONUT CREAM PIE</a></h5>
+							<span>Available all year</span>
+							<p>&nbsp;</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-4">
+					<div class="single_blog wow fadeInUp" data-wow-delay="0.3s">
+						<div class="blog_img">
+							<a href="#"><img src="images/blog/banana.jpg" alt="" /></a>
+						</div>
+						<div class="blog_text">
+							<h5><a href="#">BANANA CREAM PIE</a></h5>
 							<span>Available all year</span>
 							<p>&nbsp;</p>
 						</div>
@@ -261,7 +288,7 @@
 				<div class="col-sm-4">
 					<div class="single_blog wow fadeInLeft" data-wow-delay="0.3s">
 						<div class="blog_img">
-							<a href="#"><img src="images/blog/caramel-apple2.jpg" alt="" /></a>
+							<a href="#"><img src="images/blog/caramel-apple3.jpg" alt="" /></a>
 						</div>
 						<div class="blog_text">
 							<h5><a href="#">CARAMEL APPLE PIE</a></h5>
@@ -285,10 +312,26 @@
 				<div class="col-sm-4">
 					<div class="single_blog wow fadeInUp" data-wow-delay="0.3s">
 						<div class="blog_img">
-							<a href="#"><img src="images/blog/pumpkin.jpg" alt="" /></a>
+							<a href="#"><img src="images/blog/pumpkin2.jpg" alt="" /></a>
 						</div>
 						<div class="blog_text">
 							<h5><a href="#">PUMPKIN CHIFFON PIE</a></h5>
+							<span>Available all year</span>
+							<p>&nbsp;</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-sm-4">
+				</div>
+				<div class="col-sm-4">
+					<div class="single_blog wow fadeInLeft" data-wow-delay="0.3s">
+						<div class="blog_img">
+							<a href="#"><img src="images/blog/choco-chip.jpg" alt="" /></a>
+						</div>
+						<div class="blog_text">
+							<h5><a href="#">CHOCOLATE CHIP PIE</a></h5>
 							<span>Available all year</span>
 							<p>&nbsp;</p>
 						</div>
@@ -306,14 +349,12 @@
 					<h1>DINNER PIES</h1>
 					<p>Available all year round: chicken or beef<br>
 						6" personal size (serves 1-2) - <b>$7.50</b><br>
-						11" family size (serves 4-6) - <b>$22</b><br>
+						12" family size (serves 4-6) - <b>$22</b><br>
 						<i>Available fresh, ready to bake or frozen ready to put in your freezer or fresh baked, ready to pick up for dinner</i>
 					</p>
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-sm-2">&nbsp;
-				</div>
 				<div class="col-sm-4">
 					<div class="single_blog wow fadeInLeft" data-wow-delay="0.3s">
 						<div class="blog_img">
@@ -334,6 +375,18 @@
 						<div class="blog_text">
 							<h5><a href="#">BEEF POT PIE</a></h5>
 							<span>Available all year round</span>
+							<p>&nbsp;</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-4">
+					<div class="single_blog wow fadeInUp" data-wow-delay="0.3s">
+						<div class="blog_img">
+							<a href="#"><img src="images/blog/turkey.jpg" alt="" /></a>
+						</div>
+						<div class="blog_text">
+							<h5><a href="#">TURKEY POT PIE</a></h5>
+							<span>Available November through December</span>
 							<p>&nbsp;</p>
 						</div>
 					</div>
@@ -416,91 +469,6 @@
 		</div>
 	</section>
 	<!-- team-section-end -->
-	<!-- happy-clients-section-start -->
-	<section class="happy section_padding">
-		<div class="container">
-			<div class="row wow fadeInDown text-center">
-				<div class="col-sm-3">
-					<div class="single_counter happy_counter contact_icon">
-						<i class="fa fa-heart-o"></i>
-						<h1><span class="counter" id="counter_happy">312</span></h1>
-						<span>PIES ORDERED</span>
-					</div>
-				</div>
-				<div class="col-sm-3">
-					<div class="single_counter happy_counter contact_icon">
-						<i class="fa fa-frown-o"></i>
-						<h1><span class="counter" id="counter_happy">98</span></h1>
-						<span>HAPPY CLIENTS</span>
-					</div>
-				</div>
-				<div class="col-sm-3">
-					<div class="single_counter happy_counter contact_icon">
-						<i class="fa fa-transgender-alt"></i>
-						<h1><span class="counter" id="counter_happy">810</span></h1>
-						<span>Apple sliced</span>
-					</div>
-				</div>
-				<div class="col-sm-3">
-					<div class="single_counter happy_counter contact_icon">
-						<i class="fa fa-comments"></i>
-						<h1><span class="counter" id="counter_happy">600</span></h1>
-						<span>Comments</span>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- happy-section-end -->
-	<!-- Testimonials-we-do-section-start -->
-	<section class="testimonials text-center">
-		<div class="container">
-			<div class="row">
-				<div class="testimonials_title section-title wow flipInX" data-wow-delay="0.3s">
-					<h1>Testimonials</h1>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-6 col-sm-8 col-text-center text-center">
-					<div id="fawesome_carousel_3" class="carousel slide" data-ride="carousel">
-						<ol class="carousel-indicators testimonials_indicators">
-							<li data-target="#fawesome_carousel_3" data-slide-to="0" class="active"></li>
-							<li data-target="#fawesome_carousel_3" data-slide-to="1"></li>
-							<li data-target="#fawesome_carousel_3" data-slide-to="2"></li>
-							<li data-target="#fawesome_carousel_3" data-slide-to="3"></li>
-						</ol>
-						<div class="carousel-inner" role="listbox">
-							<div class="item active">
-								<div class="single_testimonials">
-									<p>What a Pie !.</p>
-									<h4>Margaret - Teacher in Snowcrest</h4>
-								</div>
-							</div>
-							<div class="item">
-								<div class="single_testimonials">
-									<p>Best chicken pie ever.</p>
-									<h4>Steve O.</h4>
-								</div>
-							</div>
-							<div class="item">
-								<div class="single_testimonials">
-									<p>I'm not a desert guy... but I cannot stop eating them.</p>
-									<h4>Eric Y.</h4>
-								</div>
-							</div>
-							<div class="item">
-								<div class="single_testimonials">
-									<p>Mamamia.</p>
-									<h4>Yira</h4>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- Testimonials-section-end -->
 	<!-- contact-section-start -->
 	<section class="contact section_padding" id="contact">
 		<div class="container">
