Update contact me with pictures. Remove some part with social media

--- a/www/index.html
+++ b/www/index.html
@@ -151,7 +151,7 @@
 			<div class="row">
 				<div class="blog-title section-title wow flipInX" data-wow-delay="0.3s">
 					<h1>FRUITS PIES</h1>
-					<span>AVAILABLE IN SEASON and slightly beyond</span>
+					<span>AVAILABLE IN SEASON and slightly beyond.</span>
 					<p>
 						strawberry/rhubarb, cherry, peach, peach/berry, apple...<br>
 						<i>continuously inventing new recipes</i><br>
@@ -310,12 +310,12 @@
 					</div>
 				</div>
 				<div class="col-sm-4">
-					<div class="single_blog wow fadeInUp" data-wow-delay="0.3s">
+					<div class="single_blog wow fadeInLeft" data-wow-delay="0.3s">
 						<div class="blog_img">
-							<a href="#"><img src="images/blog/pumpkin2.jpg" alt="" /></a>
+							<a href="#"><img src="images/blog/choco-chip.jpg" alt="" /></a>
 						</div>
 						<div class="blog_text">
-							<h5><a href="#">PUMPKIN CHIFFON PIE</a></h5>
+							<h5><a href="#">CHOCOLATE CHIP PIE</a></h5>
 							<span>Available all year</span>
 							<p>&nbsp;</p>
 						</div>
@@ -326,13 +326,13 @@
 				<div class="col-sm-4">
 				</div>
 				<div class="col-sm-4">
-					<div class="single_blog wow fadeInLeft" data-wow-delay="0.3s">
+					<div class="single_blog wow fadeInUp" data-wow-delay="0.3s">
 						<div class="blog_img">
-							<a href="#"><img src="images/blog/choco-chip.jpg" alt="" /></a>
+							<a href="#"><img src="images/blog/pumpkin2.jpg" alt="" /></a>
 						</div>
 						<div class="blog_text">
-							<h5><a href="#">CHOCOLATE CHIP PIE</a></h5>
-							<span>Available all year</span>
+							<h5><a href="#">PUMPKIN CHIFFON PIE</a></h5>
+							<span>Choose between graham cracker or pastry crust.<br>Available all year</span>
 							<p>&nbsp;</p>
 						</div>
 					</div>
@@ -350,7 +350,7 @@
 					<p>Available all year round: chicken or beef<br>
 						6" personal size (serves 1-2) - <b>$7.50</b><br>
 						12" family size (serves 4-6) - <b>$22</b><br>
-						<i>Available fresh, ready to bake or frozen ready to put in your freezer or fresh baked, ready to pick up for dinner</i>
+						<i>Available frozen ready to put in your freezer or cooked ready to pick up for dinner.</i>
 					</p>
 				</div>
 			</div>
@@ -401,39 +401,10 @@
 			<div class="row text-center">
 				<div class="about_title col-text-center section-title wow flipInX" data-wow-delay="0.3s">
 					<h1>ABOUT THE PIES</h1>
-					<p>Everything started by cooking with love for family &amp; friends...<br> who were always asking me to prepare for them one of my famous pie...
-						<br>So why not share with you today these pies ?</p>
-					<p>My recipe is as simple as 1, 2, 3...</p>
-				</div>
-				<div class="col-sm-4">
-					<div class="about_text wow fadeInLeft" data-wow-delay="0.3s">
-						<div class="number_text">
-							<h1 class="yellow_number">01</h1>
-							<h1 class="black_number">01</h1>
-						</div>
-						<span class="black_text">Pick some<br />fresh fruits.</span>
-						<p>Fruits choice depends on the season<br> and if possible are<br> grown localy here in <b>Utah</b>.</p>
-					</div>
-				</div>
-				<div class="col-sm-4">
-					<div class="about_text wow fadeInUp" data-wow-delay="0.3s">
-						<div class="number_text">
-							<h1 class="yellow_number">02</h1>
-							<h1 class="black_number">02</h1>
-						</div>
-						<span class="black_text">Prepare<br />the crust.</span>
-						<p>Leave it some time<br> to breath...<br> and give its best.</p>
-					</div>
-				</div>
-				<div class="col-sm-4">
-					<div class="about_text wow fadeInRight" data-wow-delay="0.3s">
-						<div class="number_text">
-							<h1 class="yellow_number">03</h1>
-							<h1 class="black_number">03</h1>
-						</div>
-						<span class="black_text">Mix and<br />cook.</span>
-						<p>The perfect cooking<br />will sublime all the flavors<br />with a crusty crust.</p>
-					</div>
+					<p>
+						All pies are made with local or home grown produce when at all possible.<br>
+						Fruit pies that are slightly beyond have been previously frozen.
+					</p>
 				</div>
 			</div>
 			<hr class="margin_eight" />
@@ -446,22 +417,16 @@
 			<div class="row">
 				<div class="about_title col-text-center section-title wow flipInX" data-wow-delay="0.3s">
 					<h1>ABOUT ME</h1>
-					<p>Smile, Joy, Happiness... not necessary in this order.<br>Simply the best chef of the Valley.</p>
+					<p>I love baking and developing new recipes.<br> When I am not baking I love taking care of my garden in the beautiful Ogden Valley.</p>
 				</div>
 				<div class="col-sm-4">
 					&nbsp;
 				</div>
 				<div class="col-sm-4">
 					<div class="team_text wow fadeInRight" data-wow-delay="0.3s">
-						<img src="images/team/team-member3.jpg" alt="" />
+						<img src="images/team/kelli.jpg" alt="" />
 						<div class="team_single_text">
 							<span class="span_first">Kelli</span><br />
-							<span>CHEF PIE DESIGNER</span>
-							<div class="bg-yellow team_yellow"></div>
-							<div class="team_icon">
-								<a href="www.facebook.com"><i class="fa fa-facebook"></i></a>
-							</div>
-							<p>Any special request ?<br>Feel free to contact me,<br>I would love to cook the <b>pie</b><br> <b>you</b> always dreamed about.</p>
 						</div>
 					</div>
 				</div>
@@ -524,8 +489,6 @@
 		<div class="container">
 			<div class="row">
 				<div class="social_icon text-center">
-					<a href="www.facebook.com"><i class="fa fa-facebook"></i></a>
-					<a href="www.twitter.com"><i class="fa fa-twitter"></i></a>
 				</div>
 			</div>
 		</div>
