Change the availability dates on pies

--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
 							<a href="#"><img src="images/blog/triple-berry.jpg" alt="" /></a>
 						</div>
 						<div class="blog_text">
-							<h5><a href="#">PEACH/TRIPLE BERRY</a></h5>
-							<span>From August to November</span>
+							<h5><a href="#">PEACH or PEACH/TRIPLE BERRY</a></h5>
+							<span>From August through Thanksgiving</span>
 							<p>raspberry, blackberry &amp; blueberry</p>
 						</div>
 					</div>
@@ -207,7 +207,7 @@
 						</div>
 						<div class="blog_text">
 							<h5><a href="#">CHERRY PIE</a></h5>
-							<span>From July 4th through September</span>
+							<span>From July 4th through Thanksgiving</span>
 							<p>&nbsp;</p>
 						</div>
 					</div>
@@ -292,7 +292,7 @@
 						</div>
 						<div class="blog_text">
 							<h5><a href="#">CARAMEL APPLE PIE</a></h5>
-							<span>Available for Thanksgiving and Christmas</span>
+							<span>Available September 15th through Christmas</span>
 							<p>&nbsp;</p>
 						</div>
 					</div>
@@ -332,7 +332,7 @@
 						</div>
 						<div class="blog_text">
 							<h5><a href="#">PUMPKIN CHIFFON PIE</a></h5>
-							<span>Choose between graham cracker or pastry crust.<br>Available all year</span>
+							<span>Choose between graham cracker or pastry crust.<br>Available November through Christmas</span>
 							<p>&nbsp;</p>
 						</div>
 					</div>
