Update crteam pie crust

--- a/www/index.html
+++ b/www/index.html
@@ -224,7 +224,7 @@
 					<h1>CREAM PIES</h1>
 					<p>
 						Available all year round: chocolate, banana, coconut!<br>
-						Graham cracker or pastry crust<br>
+						comes with Graham cracker crust<br>
 						<b>$17</b>
 					</p>
 				</div>
